<resources>
    <string name="app_name">PillsTest</string>
    <string name="title_search">Search</string>
    <string name="search_hint">Search pill</string>
    <string name="base_url">https://api.pills-prod.sdh.com.ua/v1/</string>
    <string name="trade_label_title">Trade label</string>
    <string name="manufacturer_name_title">Manufacturer name</string>
    <string name="packaging_description_title">Packaging description</string>
    <string name="composition_description_title">Composition description</string>
    <string name="composition_inn_title">Composition inn</string>
    <string name="composition_pharm_form_title">Composition pharm form</string>
    <string name="title_empty_list">Список пуст</string>
    <string name="update">обновить</string>
    <string name="error_load_data">error load data</string>
    <string name="text_inn">$1%s, $2%d</string>
    <string name="text_pharmform">$1%s, $2%d</string>
</resources>
