<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/style_text_view"
        android:layout_marginTop="4dp"
        android:textColor="@android:color/black"
        android:text="@string/trade_label_title" />

    <TextView
        android:id="@+id/trade_label_tv"
        style="@style/style_text_view"
        android:layout_marginTop="8dp"
        android:textColor="@color/text_color_subtitle"
        tools:text="Industrial Designer, Hardware Hardware" />

    <TextView
        style="@style/style_text_view"
        android:layout_marginTop="4dp"
        android:textColor="@android:color/black"
        android:text="@string/manufacturer_name_title" />

    <TextView
        android:id="@+id/manufacturer_name_tv"
        style="@style/style_text_view"
        android:layout_marginTop="8dp"
        android:textColor="@color/text_color_subtitle"
        tools:text="Industrial Designer, Hardware Hardware" />

    <TextView
        style="@style/style_text_view"
        android:layout_marginTop="4dp"
        android:textColor="@android:color/black"
        android:text="@string/packaging_description_title" />

    <TextView
        android:id="@+id/packaging_description_tv"
        style="@style/style_text_view"
        android:layout_marginTop="8dp"
        android:textColor="@color/text_color_subtitle"
        tools:text="Industrial Designer, Hardware Hardware" />

    <TextView
        style="@style/style_text_view"
        android:layout_marginTop="4dp"
        android:textColor="@android:color/black"
        android:text="@string/composition_description_title" />

    <TextView
        android:id="@+id/composition_description_tv"
        style="@style/style_text_view"
        android:layout_marginTop="8dp"
        android:textColor="@color/text_color_subtitle"
        tools:text="Industrial Designer, Hardware Hardware" />

    <TextView
        style="@style/style_text_view"
        android:layout_marginTop="4dp"
        android:textColor="@android:color/black"
        android:text="@string/composition_inn_title" />

    <TextView
        android:id="@+id/composition_inn_tv"
        style="@style/style_text_view"
        android:layout_marginTop="8dp"
        android:textColor="@color/text_color_subtitle"
        tools:text="Industrial Designer, Hardware Hardware" />

    <TextView
        style="@style/style_text_view"
        android:layout_marginTop="4dp"
        android:textColor="@android:color/black"
        android:text="@string/composition_pharm_form_title" />

    <TextView
        android:id="@+id/composition_pharm_form_tv"
        style="@style/style_text_view"
        android:layout_marginTop="8dp"
        android:textColor="@color/text_color_subtitle"
        tools:text="Industrial Designer, Hardware Hardware" />

</LinearLayout>